# smartapi

./: .gitignore  .gitlab-ci.yml  DEVELOPMENT_PLAN.md  Dockerfile  README.md  conftest.py  docker-compose.yaml  mcp_server_config.json  pyproject.toml
.windsurf/rules/: env.md
doc/: 01-快速入门.md  02-用例编写详解.md  03-高级功能.md  04-鉴权与Mock.md  05-Web管理与MCP.md  README.md
doc/examples/: 01_hello_world.yaml  02_post_json.yaml  03_assertions_showcase.yaml  04_multi_step_extract.yaml  05_dynamic_variables.yaml  06_auth_demo.yaml  07_dependency_skip.yaml  08_loop_retry.yaml  09_full_workflow.yaml  10_test_suite.yaml
environments/: dev.yaml  prod.yaml
mock/: example_mock.yaml
skills/: smartapi-test.md
skills/references/: generate-testcase.md  import-openapi.md  mock-and-data.md  run-and-debug.md  yaml-schema.md
smartapi/: __init__.py  pytest_plugin.py
smartapi/auth/: handler.py
smartapi/cli/: main.py
smartapi/core/: assertion.py  executor.py  extractor.py  models.py  parser.py  security.py  variables.py
smartapi/mcp_server/: server.py
smartapi/mock/: data_factory.py  server.py
smartapi/notify/: notifier.py
smartapi/plugins/: base.py
smartapi/report/: html_report.py
smartapi/web/: app.py  state.py
testcases/: example_assertions.yaml  example_auth.yaml  example_get.yaml  example_multi_step.yaml
tests/: test_assertion.py  test_auth.py  test_data_factory.py  test_executor.py  test_extractor.py  test_parser.py  test_plugins.py  test_security.py  test_variables.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
(+13 files in other folders)
